--- a/nice-bust4-uart.yaml
+++ b/nice-bust4-uart.yaml
@@ -3,6 +3,7 @@
 
 substitutions:
   device_name: "nice-bust4-uart"
+  
 
 
 esphome:
@@ -37,6 +38,32 @@ api:
     then:
       lambda: |-
          my_nice_cover -> NiceBusT4::send_raw_cmd(raw_cmd);
+# для генерирования и отправки inf команд на привод         
+  - service: send_inf_command
+    variables:
+       to_addr: string
+       whose: string
+       command: string
+       type_command: string
+       data_on: bool
+       data_command: string
+       
+         
+    then:
+      lambda: |-
+        std::vector < uint8_t > v_to_addr = my_nice_cover -> NiceBusT4::raw_cmd_prepare (to_addr);
+        std::vector < uint8_t > v_whose = my_nice_cover -> NiceBusT4::raw_cmd_prepare (whose);
+        std::vector < uint8_t > v_command = my_nice_cover -> NiceBusT4::raw_cmd_prepare (command);
+        std::vector < uint8_t > v_type_command = my_nice_cover -> NiceBusT4::raw_cmd_prepare (type_command);
+        std::vector < uint8_t > v_data_command = my_nice_cover -> NiceBusT4::raw_cmd_prepare (data_command);
+        if (data_on) {
+          my_nice_cover -> NiceBusT4::tx_buffer_.push(my_nice_cover -> NiceBusT4::gen_inf_cmd(v_to_addr[0], v_to_addr[1], v_whose[0], v_command[0], v_type_command[0], v_data_command, v_data_command.size()));
+        } else {
+          my_nice_cover -> NiceBusT4::tx_buffer_.push(my_nice_cover -> NiceBusT4::gen_inf_cmd(v_to_addr[0], v_to_addr[1], v_whose[0], v_command[0], v_type_command[0]));
+        }
+        
+
+
  
   reboot_timeout: 0s # иначе перезагружается при отключении от hassio  
   
@@ -79,8 +106,7 @@ button:
     on_press:
       lambda: |-
          my_nice_cover -> NiceBusT4::send_raw_cmd("55 0c 00 ff 00 66 01 05 9D 01 82 01 64 E6 0c");
-        
-#     /*  my_nice_cover -> NICECover::send_open(); */        
+           
         
 
 #uart:
@@ -91,8 +117,9 @@ button:
 
 cover:
 - platform: bus_t4
-#- platform: nice
-  name: "Nice SO2000"
-  device_class: garage
-  id: "my_nice_cover"
+  name: "Nice RB500HS"
+  id: my_nice_cover
+  address: 0x0003            # адрес привода
+  use_address: 0x0081        # адрес шлюза
+
 
