--- a/nice-bust4-uart.yaml
+++ b/nice-bust4-uart.yaml
@@ -30,6 +30,7 @@ logger:
   
 # Enable Home Assistant API
 api:
+  reboot_timeout: 0s # иначе перезагружается при отключении от hassio  
   services:
 # для отправки hex команд на привод
   - service: raw_command
@@ -38,34 +39,37 @@ api:
     then:
       lambda: |-
          my_nice_cover -> NiceBusT4::send_raw_cmd(raw_cmd);
-# для генерирования и отправки inf команд на привод         
+         
   - service: send_inf_command
     variables:
        to_addr: string
        whose: string
        command: string
        type_command: string
+       next_data: string
        data_on: bool
        data_command: string
-       
-         
     then:
       lambda: |-
-        std::vector < uint8_t > v_to_addr = my_nice_cover -> NiceBusT4::raw_cmd_prepare (to_addr);
-        std::vector < uint8_t > v_whose = my_nice_cover -> NiceBusT4::raw_cmd_prepare (whose);
-        std::vector < uint8_t > v_command = my_nice_cover -> NiceBusT4::raw_cmd_prepare (command);
-        std::vector < uint8_t > v_type_command = my_nice_cover -> NiceBusT4::raw_cmd_prepare (type_command);
-        std::vector < uint8_t > v_data_command = my_nice_cover -> NiceBusT4::raw_cmd_prepare (data_command);
-        if (data_on) {
-          my_nice_cover -> NiceBusT4::tx_buffer_.push(my_nice_cover -> NiceBusT4::gen_inf_cmd(v_to_addr[0], v_to_addr[1], v_whose[0], v_command[0], v_type_command[0], v_data_command, v_data_command.size()));
-        } else {
-          my_nice_cover -> NiceBusT4::tx_buffer_.push(my_nice_cover -> NiceBusT4::gen_inf_cmd(v_to_addr[0], v_to_addr[1], v_whose[0], v_command[0], v_type_command[0]));
-        }
+        my_nice_cover -> NiceBusT4::send_inf_cmd(to_addr, whose, command, type_command, next_data, data_on, data_command);
+
+
+
+#        std::vector < uint8_t > v_to_addr = my_nice_cover -> NiceBusT4::raw_cmd_prepare (to_addr);
+#        std::vector < uint8_t > v_whose = my_nice_cover -> NiceBusT4::raw_cmd_prepare (whose);
+#        std::vector < uint8_t > v_command = my_nice_cover -> NiceBusT4::raw_cmd_prepare (command);
+#        std::vector < uint8_t > v_type_command = my_nice_cover -> NiceBusT4::raw_cmd_prepare (type_command);
+#        std::vector < uint8_t > v_data_command = my_nice_cover -> NiceBusT4::raw_cmd_prepare (data_command);
+#        if (data_on) {
+#          my_nice_cover -> NiceBusT4::tx_buffer_.push(my_nice_cover -> NiceBusT4::gen_inf_cmd(v_to_addr[0], v_to_addr[1], v_whose[0], v_command[0], v_type_command[0], v_data_command, v_data_command.size()));
+#        } else {
+#          my_nice_cover -> NiceBusT4::tx_buffer_.push(my_nice_cover -> NiceBusT4::gen_inf_cmd(v_to_addr[0], v_to_addr[1], v_whose[0], v_command[0], v_type_command[0]));
+#        }
         
 
 
  
-  reboot_timeout: 0s # иначе перезагружается при отключении от hassio  
+
   
 ota:
 
@@ -88,7 +92,6 @@ wifi:
     password: !secret ota_pass
 
 
-
 captive_portal:
 
 
@@ -97,29 +100,53 @@ web_server:
   port: 80
   
 
-
-
+# Кнопки для отправки команд
 button:
   - platform: template
-    name: SBS 
-    id: send_sbs
+    name: Пошагово
+    id: sbs
     on_press:
       lambda: |-
-         my_nice_cover -> NiceBusT4::send_raw_cmd("55 0c 00 ff 00 66 01 05 9D 01 82 01 64 E6 0c");
-           
-        
+           my_nice_cover -> NiceBusT4::send_cmd(bus_t4::SBS);
 
-#uart:
-#  id: uart_bus
-#  tx_pin: 1
-#  rx_pin: 3
-#  baud_rate: 19200
+#         my_nice_cover -> NiceBusT4::send_raw_cmd("55 0c 00 ff 00 66 01 05 9D 01 82 01 64 E6 0c");
+
+
+  - platform: template
+    name: Частичное открытие 1
+    id: p_opn1
+    on_press:
+      lambda: |-
+         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::P_OPN1);
+                      
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::STOP);
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::OPEN);
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::CLOSE);
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::P_OPN2);
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::P_OPN3);
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::P_OPN4);
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::P_OPN5);
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::P_OPN6);
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::UNLK_OPN);  # Разблокировать и открыть 
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::CLS_LOCK);  # Закрыть и блокировать
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::UNLCK_CLS); # Разблокировать и Закрыть
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::LOCK);      # Блокировать
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::UNLOCK);    # Разблокировать
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::HOST_SBS);  # Ведущий SBS
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::HOST_OPN);  # Ведущий открыть
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::HOST_CLS);  # Ведущий закрыть
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::SLAVE_SBS); # Ведомый SBS
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::SLAVE_OPN); # Ведомый открыть
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::SLAVE_CLS); # Ведомый закрыть
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::AUTO_ON);   # Автооткрывание активно
+#         my_nice_cover -> NiceBusT4::send_cmd(bus_t4::AUTO_OFF);  # Автооткрывание неактивно
+
+
+
 
 cover:
 - platform: bus_t4
   name: "Nice RB500HS"
   id: my_nice_cover
-  address: 0x0003            # адрес привода
-  use_address: 0x0081        # адрес шлюза
-
-
+#  address: 0x0003            # адрес привода
+#  use_address: 0x0081        # адрес шлюза
