--- a/nice-wifi.yaml
+++ b/nice-wifi.yaml
@@ -93,9 +93,9 @@ captive_portal:
 
 web_server:
   port: 80
-  js_include: "www.js"
-  js_url: ""
-  version: 2  
+#  js_include: "www.js"
+#  js_url: ""
+#  version: 2  
 
 # Кнопки для отправки команд
 button:
